# Wind

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  xmake.lua
Crychic/: CMakeLists.txt
Crychic/include/: Application.h  Config.h  EntryPoint.h  GUI.h  RenderCore.h
Crychic/shaders/: BasePassPS.hlsl  BasePassVS.hlsl
Crychic/src/: main.cpp
Crychic/src/Assets/: AssetHandle.h  AssetManager.h
Crychic/src/Component/: Component.h  IDComponent.h  MeshComponent.h  MeshRenderer.h  TagComponent.h  Transform.h
Crychic/src/Core/: Application.cpp  Application.h  Config.h  Config.h.in  ConfigManager.h  Define.h  Log.h  Macro.h  Math.cpp  Math.h  Object.h  Paths.cpp  Paths.h  Ref.h  Singleton.h  SubSystem.h  UUID.cpp  UUID.h  Window.cpp  Window.h
Crychic/src/ECS/: Entity.h
Crychic/src/Graphics/: RenderSystem.cpp  RenderSystem.h  Renderer.h
Crychic/src/JobSystem/: JobSystem.cpp  JobSystem.h  UpdateGroup.h
Crychic/src/Loader/: BasicIO.cpp  BasicIO.h
Crychic/src/RenderGraph/: Resource.h
Crychic/src/Rendering/: Camera.h  Material.h  PSOCache.cpp  PSOCache.h  RenderSystem.cpp  RenderSystem.h  SceneRenderer.h  ShaderCache.cpp  ShaderCache.h  ShaderCompiler.h
Crychic/src/Scene/: Entity.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Crychic/src/Scripting/: ScriptEngine.cpp  ScriptEngine.h
SandBox/: CMakeLists.txt  main.cpp  xmake.lua
SandBox/include/: Editor.h
SandBox/src/: Editor.cpp  WinMain.cpp
ScriptRuntime/: CMakeLists.txt
ScriptRuntime/Core/: Core.cs
Wind/: CMakeLists.txt  README.md  before_build.lua  std.h  xmake.lua
Wind/Asset/: Asset.h
Wind/Backend/: Allocater.cpp  Buffer.cpp  Buffer.h  Command.cpp  Command.h  ComputeShader.cpp  ComputeShader.h  Device.cpp  Device.h  Handle.h  ImGUIContext.cpp  ImGUIContext.h  PipelineBuilder.cpp  PipelineBuilder.h  RHIResource.cpp  RHIResource.h  RasterShader.cpp  RasterShader.h  RenderEncoder.cpp  Shader.cpp  Shader.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h  Utils.cpp  Utils.h  VulkanHeader.h
Wind/Core/: Memory.h  PathManager.cpp  PathManager.h  ResourcePool.cpp  ResourcePool.h  Service.h
Wind/ECS/: Component.cpp  Component.h  Entity.h
Wind/Engine/: Application.h  Engine.cpp  Engine.h  EntryPoint.h  RenderConfig.h  RuntimeContext.cpp  RuntimeContext.h  Window.cpp  Window.h
Wind/Renderer/: Material.cpp  Material.h  MeshPass.h  PsoCache.cpp  Renderer.cpp  Renderer.h  SceneRenderer.cpp  SceneRenderer.h  ShaderMap.cpp  ShaderMap.h
Wind/Renderer/RenderGraph/: PassNode.cpp  PassNode.h  RenderGraph.cpp  RenderGraph.h  RenderGraphPass.h  RenderGraphTexture.cpp  RenderGraphTexture.h
Wind/Resource/: Loader.cpp  Loader.h  Mesh.cpp  Mesh.h  SceneTexture.h
Wind/Scene/: CullingManager.h  GLTFScene.cpp  GLTFScene.h  RenderScene.h  Scene.cpp  Scene.h
Wind/include/: Buffer.h  Context.h  Image.h  Resource.h  SwapChain.h
Wind/src/: Buffer.cpp  Context.cpp  Image.cpp  SwapChain.cpp  VulkanGuard.cpp
game/: Entry.cpp  Game.cpp  Game.h
include/: Wind.h
include/Backend/: Buffer.h  Command.h  Device.h  Enum.h  Guard.h  Image.h  Material.h  Pipeline.h  RenderPass.h  Resource.h  Shader.h  Stream.h  Swapchain.h  Utils.h  VertexLayout.h
include/Component/: Component.h  MeshComponent.h  MeshRenderer.h
include/Core/: Allocator.h  Application.h  Component.h  DeletionQueue.h  DependencyGraph.h  Global.h  Handle.h  IO.h  Log.h  Object.h  Path.h  Singleton.h  StructureOfArrays.h
include/Graphics/: Camera.h  PSOCache.h  RenderConfig.h  Renderer.h  ShaderCache.h  View.h
include/JobSystem/: JobBuffer.h  JobSystem.h
include/RenderGraph/: BlackBoard.h  PassDesc.h  PassNode.h  RGAllocator.h  RenderGraph.h  RenderGraphID.h  RenderGraphPass.h  RenderGraphResource.h  RenderGraphTexture.h  ResourceNode.h  ResourceRegistry.h
include/Resource/: Mesh.h
include/Scene/: Entity.h  Scene.h  SceneManager.h
modules/Backend/: Buffer.cpp  Buffer.h  Command.h  Define.h  Descriptor.cpp  Descriptor.h  Device.cpp  Device.h  Enum.h  Export.cpp  Guard.h  Image.cpp  Image.h  Pipeline.cpp  Pipeline.h  Resource.h  ResourcePool.h  Shader.cpp  Shader.h  Stream.cpp  Stream.h  Swapchain.cpp  Swapchain.h  Utils.cpp  Utils.h  VertexLayout.cpp  VertexLayout.h
modules/Component/: Component.h  MeshRenderer.cpp  MeshRenderer.h  Transform.h
modules/Core/: Allocator.cpp  Allocator.h  Application.cpp  Application.h  DependencyGraph.h  Entry.cpp  FastPropertyName.h  FileWatcher.cpp  FileWatcher.h  Global.cpp  Global.h  GlobalContext.cpp  GlobalContext.h  Handle.h  IO.h  LinearAllocator.cpp  Log.h  Memory.h  NonCopy.h  Path.cpp  Path.h  RefCount.h  Service.cpp  Service.h  SharedPTR.h  Singleton.h  UUID.h  Vector.h  Wind.cpp  Wind.h  Window.cpp  Window.h  main.cpp
modules/Graphics/: DrawUtils.h  GeometryPass.cpp  GeometryPass.h  GlobalRT.h  Material.h  Mesh.h  PSOCache.cpp  PSOCache.h  RenderObject.h  RenderPass.h  Renderer.cpp  Renderer.h  ShaderCache.cpp  ShaderCache.h  ShaderParameter.h  ShaderPass.h  VertexLayout.h  View.h
modules/JobSystem/: JobBuffer.h  JobCounter.h  JobSystem.cpp  JobSystem.h
modules/RenderGraph/: BlackBoard.cpp  Blackboard.cpp  Blackboard.h  DrawUtils.h  PassNode.h  RGAllocator.cpp  RGAllocator.h  RenderGraph.cpp  RenderGraph.h  RenderGraph.inl  RenderGraphAllocator.h  RenderGraphBuilder.cpp  RenderGraphBuilder.h  RenderGraphBuilder.inl  RenderGraphHandle.h  RenderGraphID.h  RenderGraphNode.h  RenderGraphPass.cpp  RenderGraphPass.h  RenderGraphResource.h  RenderGraphResourceRegistry.h  RenderGraphTexture.cpp  RenderGraphTexture.h  RenderPassNode.cpp  ResourceNode.h  ResourceRegistry.cpp  ResourceRegistry.h  VirtualResource.cpp  VirtualResource.h
modules/Resource/: Mesh.cpp  Mesh.h
modules/Scene/: Camera.cpp  Camera.h  CameraManager.h  Entity.h  EntityTemplate.h  GLTFScene.h  GPUScene.cpp  GPUScene.h  GameObject.h  Scene.cpp  Scene.h  SceneManager.cpp  (+2 more)
shaders/: BasePass.slang  Brdf.h  Cpu.slang  ForwardLighting.vert  MainCompute.slang  Triangle.json  Triangle.slang  Triangle.vert  UI.json  UIPass.frag
src/: main.cpp
xmake/: Config.h  Config.h.in  Env.lua
(+48 files in other folders)
